<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Header strings  -->
    <string name="app_name">MyPharmacy</string>
    <string name="app_create_account">Izrada korisničkog računa</string>
    <string name="app_login">Prijava</string>

    <!-- Main Menu strings  -->
    <string name="menu_login">Prijavi se</string>
    <string name="menu_medicine_database">Baza lijekova</string>
    <string name="menu_disease_search">Pretraživanje bolesti</string>
    <string name="menu_natural_healing">Prirodni način liječenja</string>
    <string name="menu_create_profile">Kreiraj profil</string>


    <!-- Common strings -->
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="password_confirm">Potvrda lozinke</string>
    <string name="gender">Spol</string>
    <string name="email">Email</string>
    <string name="forgot_password">Zaboravljena lozinka</string>
    <string name="user_ID">ID korisnika</string>
    <string name="year">Godište</string>
    <string name="error">Pogreška!</string>


    <!-- Profile view -->
    <string name="pillList">Popis lijekova</string>
    <string name="pillName">Lijek X</string>
    <string name="diseaseList">Popis bolesti</string>
    <string name="diseaseName">Bolest X</string>
    <string name="addPill">Dodaj lijek</string>
    <string name="addDisease">Dodaj bolest</string>
    <string name="reminder">PODSJETNIK</string>

    <!-- Reminder strings -->
    <string name="takeWithFood">Uzimanje uz obrok</string>
    <string name="frequency">Učestalost</string>
    <string name="day">Dnevno</string>
    <string name="week">Tjedno</string>
    <string name="month">Mjesečno</string>
    <string name="numberTake">Broj uzimanja tableta po danu</string>
    <string name="setReminder">Postavi</string>
    <string name="pillPick">Ime lijeka</string>

    <!-- Register Login strings -->
    <string name="usernameExists">Ovaj username vec postoji!</string>
    <string name="registrationSuccessful">Uspješna registracija!</string>
    <string name="usernameRequired">Username je obavezan</string>
    <string name="usernameMinLength">Username mora imati najmanje 4 znaka</string>
    <string name="passwordMinLength">Lozinka mora imati najmanje 6 znakova</string>
    <string name="passwordMissmatch">Lozinke se ne podudaraju!</string>
    <string name="emailRequired">Email je obavezan!</string>
    <string name="emailFormatWrong">Krivi format E-maila!</string>
    <string name="WrongLogin">Krivi podaci za prijavu!</string>
    <string name="CorrectLogin">Uspješna prijava!</string>
    <string name="register">Registracija</string>



</resources>
