<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/main_gradient">

    <RelativeLayout
            android:layout_height="40dp"
            android:layout_width="fill_parent"
            android:gravity="center">

        <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/pillPick"
                android:id="@+id/btnpillPick_reminder"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_small"
                android:textColor="@color/black"/>

        <ImageButton
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btndown"/>

    </RelativeLayout>

    <TextView
            android:layout_height="30dp"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txtTakeWithFood_reminder"
            android:text="@string/takeWithFood"
            android:textColor="@color/black"
            android:textSize="16dp"

            />

    <CheckBox
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-35dp"
            android:id="@+id/chkWithFood"
            />

    <TextView
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:text="@string/frequency"
            android:id="@+id/txtFrequency_reminder"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="20dp"/>

    <RelativeLayout
            android:layout_height="40dp"
            android:layout_width="fill_parent"
            android:gravity="center">

        <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/day"
                android:id="@+id/btnDay_reminder"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_small"
                android:textColor="@color/black"/>

        <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/week"
                android:id="@+id/btnWeek_reminder"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="100dp"
                android:textColor="@color/black"
                android:background="@drawable/button_small"/>

        <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/month"
                android:id="@+id/btnMonth_reminder"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="200dp"
                android:background="@drawable/button_small"
                android:textColor="@color/black"/>
    </RelativeLayout>

    <TextView
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:id="@+id/txtTakeNumber_reminder"
            android:text="@string/numberTake"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"/>

    <RelativeLayout
            android:layout_height="40dp"
            android:layout_width="fill_parent"
            android:gravity="center">

        <TextView
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:id="@+id/txtOneDay_reminder"
                android:text="1"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_small"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        <TextView
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:id="@+id/txtTwoDay_reminder"
                android:text="2"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_small"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="50dp"/>

        <TextView
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:id="@+id/txtThreeDay_reminder"
                android:text="3"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_small"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="100dp"/>

        <TextView
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:id="@+id/txtFourDay_reminder"
                android:text="4"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_small"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="150dp"/>

        <TextView
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:id="@+id/txtFiveDay_reminder"
                android:text="5"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_small"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="200dp"/>
    </RelativeLayout>
<!--
    <RelativeLayout
            android:layout_height="170dp"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            >

        <RelativeLayout
                android:layout_height="60dp"
                android:layout_width="fill_parent"
                android:gravity="center">

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_col_11"
                    android:text="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_coll12"
                    android:text="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="50dp"/>

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_col13"
                    android:text="3"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="100dp"/>
        </RelativeLayout>
-->
<!--
        <RelativeLayout
                android:layout_height="60dp"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_marginTop="50dp">

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_col_21"
                    android:text="4"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_coll22"
                    android:text="5"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="50dp"/>

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_col23"
                    android:text="6"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="100dp"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_height="60dp"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_marginTop="100dp">

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_col_31"
                    android:text="7"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_coll32"
                    android:text="8"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="50dp"/>

            <TextView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:id="@+id/txtReminder_col33"
                    android:text="9"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_small"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="100dp"/>

            <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePicker"
                    android:layout_alignBottom="@+id/txtReminder_coll32"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_height="80dp"
            android:layout_width="fill_parent"
            >


    </RelativeLayout> -->
    <TimePicker
            android:layout_margin="5dp"
            android:id="@+id/timePicker1_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"

            />
    <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/setReminder"
            android:id="@+id/btnRemind_reminder"
            android:layout_gravity="center"
            android:background="@drawable/button_small"
            android:textColor="@color/black"
            />
</LinearLayout>